# vetsintech-revealgrid-ot

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  VETSINTECH_SUBMISSION.md  app.py  create_demo_graphs.py  deploy.py  enhanced_demo.py  industrial_demo.py  install.sh  main.py  pyproject.toml  requirements.txt  revealgrid_mvp.py  robust_demo.py  setup.py  simple_demo.py  streamlit_app.py  test_3d_fix.py  test_revealgrid.py
.github/workflows/: ci.yml
data/demo_sites/: austin_graph.gpickle  detroit_graph.gpickle  ky_graph.gpickle
revealgrid_core/: __init__.py  confidence.py  cv_detect.py  discovery.py  graph_utils.py  risk.py  rl_gap.py  standards.py
revealgrid_demo/: DEPLOYMENT_GUIDE.md  README.md  app.py  requirements.txt  revealgrid_core.py  simple_demo.py
