[tool.poetry]
name = "revealgrid"
version = "0.1.0"
description = "RevealGrid - Industrial Asset Intelligence Platform"
authors = ["RevealGrid Team <founder@revealgrid.ai>"]
readme = "README.md"
packages = [{include = "revealgrid_core"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35"
pandas = "^2.2"
networkx = "^3.3"
pydeck = "^0.9"
matplotlib = "^3.9"
scikit-learn = "^1.5"
lightgbm = "^4.3"
ultralytics = "^8.2"
joblib = "^1.4"
numpy = "^1.24"
requests = "^2.31"
pillow = "^10.0"
opencv-python = "^4.8"
torch = {version = "^2.0", optional = true}
torchvision = {version = "^0.15", optional = true}
transformers = {version = "^4.30", optional = true}
python-docx = {version = "^0.8.11", optional = true}
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.8"
pre-commit = "^3.6"
jupyter = "^1.0"
ipykernel = "^6.29"

[tool.poetry.extras]
ml = ["torch", "torchvision", "transformers"]
docs = ["python-docx"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.black]
target-version = ['py310']
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 